--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>U.O.P.I. - IPRP X | Sistema Gestione Operativa</title>
+    <script type="text/javascript">
+  (function(l) {
+    if (l.search[1] === '/' ) {
+      var decoded = l.search.slice(1).split('&').map(function(s) { 
+        return s.replace(/~and~/g, '&')
+      }).join('?');
+      window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+      );
+    }
+  }(window.location))
+</script>
+
     <meta name="description" content="Sistema di gestione operativa integrato per U.O.P.I. - Gestione personale, comunicazioni e coordinamento." />
     <meta name="author" content="U.O.P.I." />
     <link rel="icon" type="image/png" href="https://i.imgur.com/B6E4u1X.png">
